samples/_failures_safe/1761358359_27f408_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d25974e9.c: In function ‘main’:
./samples/SAFE/__tmp_d25974e9.c:170:1: error: expected declaration or statement at end of input
  170 | int main(void) {
      | ^~~
